force-app/main/default/objects/csfb__Conga_Template__c/csfb__Conga_Template__c.object-meta.xml
<CustomObject>
    <description>Template manager for use with Conga Composer and Conga Mail Merge.</description>
    <label>Conga Invoice Template</label>
    <nameField>
        <displayFormat>CMT-{00000}</displayFormat>
        <label>Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Invoice Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>