force-app/main/default/objects/csfb__Conga_Template__c/fields/csfb__Label_Template_Use_Detail_Data__c.field-meta.xml
<CustomField>
    <fullName>csfb__Label_Template_Use_Detail_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Conga Mail Merge Label Templates Only.  This setting indicates to use ReportData (or QueryData) as the data source for Labels</inlineHelpText>
    <label>Label Template: Use Detail Data</label>
    <type>Checkbox</type>
</CustomField>