force-app/main/default/objects/csfb__Conga_Template__c/fields/csfb__Master_Field_to_Set_3__c.field-meta.xml
<CustomField>
    <fullName>csfb__Master_Field_to_Set_3__c</fullName>
    <label>Master Field to Set 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>