force-app/main/default/objects/csfb__Conga_Template__c/fields/csfb__Template_Group__c.field-meta.xml
<CustomField>
    <fullName>csfb__Template_Group__c</fullName>
    <inlineHelpText>Identify the group name to which this template belongs. Used in conjunction with the &quot;&amp;TemplateGroup=&quot; parameter in PointMerge.</inlineHelpText>
    <label>Template Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>