force-app/main/default/objects/csfb__Conga_Template__c/fields/csfb__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>csfb__Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document</fullName>
                <default>true</default>
                <label>Document</label>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
            <value>
                <fullName>Envelope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>